--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="page-content">
         <section>
             <h2 class="list-title">Tasks to Do</h2>
-            <ul class="task-list">
+            <ul class="task-list" id="tasks-to-do">
                 <li class="task-item">A Task is going to be added soon!</li>
             </ul>
         </section>
