--- a/index.html
+++ b/index.html
@@ -37,11 +37,22 @@
 
     <!-- main body start -->
     <main class="page-content">
-        <section>
+        <!-- to-do -->
+        <section class="task-list-wrapper">
             <h2 class="list-title">Tasks to Do</h2>
             <ul class="task-list" id="tasks-to-do"></ul>
         </section>
-    </main>
+        <!-- in progress -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks In Progress</h2>
+            <ul class="task-list" id="tasks-in-progress"></ul>
+          </section>
+          
+          <!-- Tasks Completed -->
+          <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks Completed</h2>
+            <ul class="task-list" id="tasks-completed"></ul>
+          </section>
 
     <!-- footer start -->
     <footer>
