updated delete button so it actually deletes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <!-- main body start -->
-    <main class="page-content">
+    <main class="page-content" id="page-content">
         <!-- to-do -->
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks to Do</h2>
